Fixed nav spacing

--- a/css/index.css
+++ b/css/index.css
@@ -162,11 +162,15 @@ p {
   background-color: rgba(255, 255, 255, 0.09);
   display: flex;
   justify-content: space-around;
-  padding: 13px 0;
+  align-items: center;
+  padding: 20px 0;
   margin-bottom: 50px;
 }
+.nav-bar a {
+  font-size: 2.4rem;
+}
 .nav-bar nav a {
-  font-size: 1.6rem;
+  padding: 0 100px;
 }
 .intro-section {
   display: flex;
