--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,12 +2,17 @@
     background-color: @header-background;
     display: flex;
     justify-content: space-around;
-    padding: 13px 0;
+    align-items: center;
+    padding: 20px 0;
     margin-bottom: 50px;
+
+    a {
+        font-size: 2.4rem;
+     }
 
     nav {
         a {
-            font-size: 1.6rem;
+            padding: 0 100px;
         }
 
     }
